--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
             </ul>
           </div>
           <div class="btn">
-            <a href=""><button class="SignIn">Sign In</button></a>
+            <a href="https://feliksd.github.io/LoginPage/" target="_blank"
+              ><button class="SignIn">Sign In</button></a
+            >
             <a href=""><button class="SignUp">Sign Up</button></a>
           </div>
         </nav>
