--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </div>
       <div class="container">
         <div class="page">
-          <div class="right">
+          <div class="left">
             <h2 class="first">Explore Indonesia</h2>
             <h1>
               Enjoy your life and <br />
@@ -47,8 +47,8 @@
               <a href=""><button class="more">LEARN MORE</button></a>
             </div>
           </div>
-          <div class="left">
-            <img src="image/contoh-foto.png" type="logo" />
+          <div class="right">
+            <img src="image/contoh-foto.png" />
           </div>
         </div>
         <div class="footer">WHERE YOU CAN EXPLORE THE WONDER OF INDONESIA</div>
