--- a/index.html
+++ b/index.html
@@ -23,10 +23,12 @@
             </ul>
           </div>
           <div class="btn">
-            <a href="https://feliksd.github.io/LoginPage/" target="_blank"
+            <a href="https://feliksd.github.io/SignIn/" target="_blank"
               ><button class="SignIn">Sign In</button></a
             >
-            <a href=""><button class="SignUp">Sign Up</button></a>
+            <a href="https://feliksd.github.io/CreateAccount/" target="_blank"
+              ><button class="SignUp">Sign Up</button></a
+            >
           </div>
         </nav>
       </div>
